crates/mir/filetests/tests/valid_programs/simple.mir
// @harness parser_roundtrip
// @harness typecheck_validation_succeeds
// @harness value_initialization_validation_succeeds
(mir
    (func foo
        (return_type int)
        (captures_type unit)
        (entry block0)
        (block block0
            (param c
                (mref unit))
            (param v0 int)
            (param v1 int)
            (int.add v2
                (v0 v1))
            (return
                (v2)))))
